@@ -12,6 +12,7 @@
    * Properly save and load reward_value to and from saves
    * Fixed events and missions being able to trigger in obelisk tests
    * Fixed beam weapons not hitting asteroids
+   * `zalek/blackhole/zbh09`: don't error out when a bioship ceases to exist
    * `kidnapped/traffic_00`: fixed formating string telling the player what system to go to
    * `kidnapped/traffic_01`: ship should spawn if taking off in the same system, not just jumping in
    * `tutorial/nelly01`: fixed derelict message not appearing
